# langchain-harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: deepagent-engineer.md  harness-architect.md  harness-evaluator.md  integration-qa.md  skill-curator.md  team-messaging-engineer.md  team-runtime-architect.md
.claude/skills/deepagents-bootstrap/: SKILL.md
.claude/skills/harness-engineering/: SKILL.md
.claude/skills/langchain-opus/: SKILL.md
.claude/skills/middleware-patterns/: SKILL.md
.claude/skills/multi-deepagent-team/: SKILL.md
.claude/skills/multi-deepagent-team/references/: protocol.md  recipes.md  troubleshooting.md
.claude/skills/skill-bundling/: SKILL.md
.claude/skills/trace-eval-loop/: SKILL.md
examples/: hello.py  meta_hello.py  team_hello.py
src/langchain_harness/: __init__.py  agent.py  cli.py  config.py  middleware.py  tools.py
src/langchain_harness/meta/: __init__.py  analyzer.py  cli.py  composer.py  evolution.py  memory.py  orchestrator.py  roles.py  schemas.py
src/langchain_harness/repl/: __init__.py  app.py  commands.py  lead_factory.py  renderer.py  session.py
src/langchain_harness/team/: __init__.py  cli.py  context.py  mailbox.py  middleware.py  registry.py  runtime.py  tasks.py  tools.py  types.py
tests/team/: conftest.py  test_lifecycle.py  test_mailbox.py  test_registry.py  test_runtime.py  test_tasks.py  test_tools.py
